@@ -20,6 +20,7 @@ package org.apache.kafka.tools;
 import org.apache.kafka.clients.admin.Admin;
 import org.apache.kafka.clients.admin.AdminClientTestUtils;
 import org.apache.kafka.clients.admin.Config;
+import org.apache.kafka.clients.admin.ConfigEntry;
 import org.apache.kafka.clients.admin.CreatePartitionsResult;
 import org.apache.kafka.clients.admin.CreateTopicsResult;
 import org.apache.kafka.clients.admin.DeleteTopicsOptions;
@@ -56,8 +57,7 @@ import org.apache.kafka.common.test.api.ClusterTest;
 import org.apache.kafka.common.test.api.Type;
 import org.apache.kafka.common.utils.Exit;
 import org.apache.kafka.metadata.LeaderAndIsr;
-import org.apache.kafka.server.common.AdminCommandFailedException;
-import org.apache.kafka.server.common.AdminOperationException;
+import org.apache.kafka.storage.internals.log.LogConfig;
 import org.apache.kafka.test.TestUtils;
 
 import org.junit.jupiter.api.Assertions;
@@ -73,6 +73,7 @@ import java.util.List;
 import java.util.Map;
 import java.util.Optional;
 import java.util.Properties;
+import java.util.Set;
 import java.util.concurrent.ExecutionException;
 import java.util.concurrent.atomic.AtomicReference;
 import java.util.stream.Collectors;
@@ -84,6 +85,7 @@ import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.junit.jupiter.api.Assertions.assertFalse;
 import static org.junit.jupiter.api.Assertions.assertInstanceOf;
 import static org.junit.jupiter.api.Assertions.assertNotNull;
+import static org.junit.jupiter.api.Assertions.assertNull;
 import static org.junit.jupiter.api.Assertions.assertThrows;
 import static org.junit.jupiter.api.Assertions.assertTrue;
 import static org.mockito.ArgumentMatchers.any;
@@ -258,7 +260,7 @@ public class TopicCommandTest {
                 .configs(Collections.emptyMap());
 
         verify(adminClient, times(1)).createTopics(
-                eq(new HashSet<>(Arrays.asList(expectedNewTopic))),
+                eq(Set.of(expectedNewTopic)),
                 argThat(exception -> !exception.shouldRetryOnQuotaViolation())
         );
     }
@@ -385,12 +387,12 @@ public class TopicCommandTest {
         try (Admin adminClient = clusterInstance.admin()) {
             adminClient.createTopics(Collections.singletonList(new NewTopic(testTopicName, defaultNumPartitions, defaultReplicationFactor)));
 
-            clusterInstance.waitForTopic(testTopicName, defaultNumPartitions);
+            clusterInstance.waitTopicCreation(testTopicName, defaultNumPartitions);
             Assertions.assertTrue(adminClient.listTopics().names().get().contains(testTopicName),
                     "Admin client didn't see the created topic. It saw: " + adminClient.listTopics().names().get());
 
             adminClient.deleteTopics(Collections.singletonList(testTopicName));
-            clusterInstance.waitForTopic(testTopicName, 0);
+            clusterInstance.waitTopicDeletion(testTopicName);
             Assertions.assertTrue(adminClient.listTopics().names().get().isEmpty(),
                     "Admin client see the created topic. It saw: " + adminClient.listTopics().names().get());
         }
@@ -409,7 +411,7 @@ public class TopicCommandTest {
         try (Admin adminClient = clusterInstance.admin()) {
             adminClient.createTopics(Collections.singletonList(new NewTopic(testTopicName, defaultNumPartitions, defaultReplicationFactor)));
 
-            clusterInstance.waitForTopic(testTopicName, defaultNumPartitions);
+            clusterInstance.waitTopicCreation(testTopicName, defaultNumPartitions);
             Assertions.assertTrue(adminClient.listTopics().names().get().contains(testTopicName),
                     "Admin client didn't see the created topic. It saw: " + adminClient.listTopics().names().get());
 
@@ -423,7 +425,7 @@ public class TopicCommandTest {
             Assertions.assertEquals(defaultReplicationFactor, (short) partitions.get(0).replicas().size(), "Unequal replication factor: " + partitions.get(0).replicas().size());
 
             adminClient.deleteTopics(Collections.singletonList(testTopicName));
-            clusterInstance.waitForTopic(testTopicName, 0);
+            clusterInstance.waitTopicDeletion(testTopicName);
             Assertions.assertTrue(adminClient.listTopics().names().get().isEmpty(),
                     "Admin client see the created topic. It saw: " + adminClient.listTopics().names().get());
         }
@@ -441,7 +443,7 @@ public class TopicCommandTest {
 
         try (Admin adminClient = clusterInstance.admin()) {
             adminClient.createTopics(Collections.singletonList(new NewTopic(testTopicName, 2, defaultReplicationFactor)));
-            clusterInstance.waitForTopic(testTopicName, 2);
+            clusterInstance.waitTopicCreation(testTopicName, 2);
             List<TopicPartitionInfo>  partitions = adminClient
                     .describeTopics(Collections.singletonList(testTopicName))
                     .allTopicNames()
@@ -459,7 +461,7 @@ public class TopicCommandTest {
 
         try (Admin adminClient = clusterInstance.admin()) {
             adminClient.createTopics(Collections.singletonList(new NewTopic(testTopicName, defaultNumPartitions, (short) 2)));
-            clusterInstance.waitForTopic(testTopicName, defaultNumPartitions);
+            clusterInstance.waitTopicCreation(testTopicName, defaultNumPartitions);
             List<TopicPartitionInfo> partitions = adminClient
                     .describeTopics(Collections.singletonList(testTopicName))
                     .allTopicNames()
@@ -482,7 +484,7 @@ public class TopicCommandTest {
             topicConfig.put(TopicConfig.DELETE_RETENTION_MS_CONFIG, "1000");
 
             adminClient.createTopics(Collections.singletonList(new NewTopic(testTopicName, 2, (short) 2).configs(topicConfig)));
-            clusterInstance.waitForTopic(testTopicName, 2);
+            clusterInstance.waitTopicCreation(testTopicName, 2);
 
 
             Config configs = adminClient.describeConfigs(Collections.singleton(configResource)).all().get().get(configResource);
@@ -501,7 +503,7 @@ public class TopicCommandTest {
                     "--topic", testTopicName);
 
             adminClient.createTopics(Collections.singletonList(new NewTopic(testTopicName, defaultNumPartitions, defaultReplicationFactor)));
-            clusterInstance.waitForTopic(testTopicName, defaultNumPartitions);
+            clusterInstance.waitTopicCreation(testTopicName, defaultNumPartitions);
 
             // try to re-create the topic
             assertThrows(TopicExistsException.class, () -> topicService.createTopic(createOpts),
@@ -515,7 +517,7 @@ public class TopicCommandTest {
         try (Admin adminClient = clusterInstance.admin();
              TopicCommand.TopicService topicService = new TopicCommand.TopicService(adminClient)) {
             adminClient.createTopics(Collections.singletonList(new NewTopic(testTopicName, defaultNumPartitions, defaultReplicationFactor)));
-            clusterInstance.waitForTopic(testTopicName, defaultNumPartitions);
+            clusterInstance.waitTopicCreation(testTopicName, defaultNumPartitions);
 
             TopicCommand.TopicCommandOptions createOpts =
                     buildTopicCommandOptionsWithBootstrap(clusterInstance, "--create", "--topic", testTopicName, "--if-not-exists");
@@ -538,7 +540,7 @@ public class TopicCommandTest {
             replicaAssignmentMap.put(2, Arrays.asList(1, 0));
 
             adminClient.createTopics(Collections.singletonList(new NewTopic(testTopicName, replicaAssignmentMap)));
-            clusterInstance.waitForTopic(testTopicName, 3);
+            clusterInstance.waitTopicCreation(testTopicName, 3);
 
             List<TopicPartitionInfo> partitions = adminClient
                     .describeTopics(Collections.singletonList(testTopicName))
@@ -609,7 +611,7 @@ public class TopicCommandTest {
         String testTopicName = TestUtils.randomString(10);
         try (Admin adminClient = clusterInstance.admin()) {
             adminClient.createTopics(Collections.singletonList(new NewTopic(testTopicName, defaultNumPartitions, defaultReplicationFactor)));
-            clusterInstance.waitForTopic(testTopicName, defaultNumPartitions);
+            clusterInstance.waitTopicCreation(testTopicName, defaultNumPartitions);
 
             String output = captureListTopicStandardOut(clusterInstance, buildTopicCommandOptionsWithBootstrap(clusterInstance, "--list"));
             assertTrue(output.contains(testTopicName), "Expected topic name to be present in output: " + output);
@@ -627,9 +629,9 @@ public class TopicCommandTest {
             adminClient.createTopics(Collections.singletonList(new NewTopic(topic1, partition, replicationFactor)));
             adminClient.createTopics(Collections.singletonList(new NewTopic(topic2, partition, replicationFactor)));
             adminClient.createTopics(Collections.singletonList(new NewTopic(topic3, partition, replicationFactor)));
-            clusterInstance.waitForTopic(topic1, partition);
-            clusterInstance.waitForTopic(topic2, partition);
-            clusterInstance.waitForTopic(topic3, partition);
+            clusterInstance.waitTopicCreation(topic1, partition);
+            clusterInstance.waitTopicCreation(topic2, partition);
+            clusterInstance.waitTopicCreation(topic3, partition);
 
             String output = captureListTopicStandardOut(clusterInstance, buildTopicCommandOptionsWithBootstrap(clusterInstance, "--list", "--topic", "kafka.*"));
             assertTrue(output.contains(topic1), "Expected topic name " + topic1 + " to be present in output: " + output);
@@ -646,7 +648,7 @@ public class TopicCommandTest {
             int partition = 2;
             short replicationFactor = 2;
             adminClient.createTopics(Collections.singletonList(new NewTopic(topic1, partition, replicationFactor)));
-            clusterInstance.waitForTopic(topic1, partition);
+            clusterInstance.waitTopicCreation(topic1, partition);
 
             String output = captureListTopicStandardOut(clusterInstance, buildTopicCommandOptionsWithBootstrap(clusterInstance, "--list", "--exclude-internal"));
             assertTrue(output.contains(topic1), "Expected topic name " + topic1 + " to be present in output: " + output);
@@ -662,7 +664,7 @@ public class TopicCommandTest {
             int partition = 2;
             short replicationFactor = 2;
             adminClient.createTopics(Collections.singletonList(new NewTopic(testTopicName, partition, replicationFactor)));
-            clusterInstance.waitForTopic(testTopicName, partition);
+            clusterInstance.waitTopicCreation(testTopicName, partition);
             topicService.alterTopic(buildTopicCommandOptionsWithBootstrap(clusterInstance, "--alter", "--topic", testTopicName, "--partitions", "3"));
 
             TestUtils.waitForCondition(
@@ -688,7 +690,7 @@ public class TopicCommandTest {
             short replicationFactor = 2;
 
             adminClient.createTopics(Collections.singletonList(new NewTopic(testTopicName, partition, replicationFactor)));
-            clusterInstance.waitForTopic(testTopicName, partition);
+            clusterInstance.waitTopicCreation(testTopicName, partition);
 
             topicService.alterTopic(buildTopicCommandOptionsWithBootstrap(clusterInstance, "--alter",
                     "--topic", testTopicName, "--replica-assignment", "5:3,3:1,4:2", "--partitions", "3"));
@@ -720,7 +722,7 @@ public class TopicCommandTest {
             int partition = 2;
             short replicationFactor = 2;
             adminClient.createTopics(Collections.singletonList(new NewTopic(testTopicName, partition, replicationFactor)));
-            clusterInstance.waitForTopic(testTopicName, partition);
+            clusterInstance.waitTopicCreation(testTopicName, partition);
 
             assertThrows(ExecutionException.class,
                     () -> topicService.alterTopic(buildTopicCommandOptionsWithBootstrap(clusterInstance, "--alter",
@@ -738,7 +740,7 @@ public class TopicCommandTest {
             int partition = 2;
             short replicationFactor = 2;
             adminClient.createTopics(Collections.singletonList(new NewTopic(testTopicName, partition, replicationFactor)));
-            clusterInstance.waitForTopic(testTopicName, partition);
+            clusterInstance.waitTopicCreation(testTopicName, partition);
 
             assertThrows(ExecutionException.class,
                     () -> topicService.alterTopic(buildTopicCommandOptionsWithBootstrap(clusterInstance, "--alter", "--topic", testTopicName,
@@ -755,7 +757,7 @@ public class TopicCommandTest {
         try (Admin adminClient = clusterInstance.admin();
              TopicCommand.TopicService topicService = new TopicCommand.TopicService(adminClient)) {
             adminClient.createTopics(Collections.singletonList(new NewTopic(testTopicName, defaultNumPartitions, defaultReplicationFactor)));
-            clusterInstance.waitForTopic(testTopicName, defaultNumPartitions);
+            clusterInstance.waitTopicCreation(testTopicName, defaultNumPartitions);
 
             assertThrows(ExecutionException.class,
                     () -> topicService.alterTopic(buildTopicCommandOptionsWithBootstrap(clusterInstance, "--alter", "--partitions", "-1", "--topic", testTopicName)),
@@ -804,7 +806,7 @@ public class TopicCommandTest {
             int numPartitions = 18;
             int replicationFactor = 3;
             adminClient.createTopics(Collections.singletonList(new NewTopic(testTopicName, numPartitions, (short) replicationFactor)));
-            clusterInstance.waitForTopic(testTopicName, numPartitions);
+            clusterInstance.waitTopicCreation(testTopicName, numPartitions);
 
             Map<Integer, List<Integer>> assignment = adminClient.describeTopics(Collections.singletonList(testTopicName))
                     .allTopicNames().get().get(testTopicName).partitions()
@@ -849,7 +851,7 @@ public class TopicCommandTest {
             HashMap<String, String> topicConfig = new HashMap<>();
             topicConfig.put(TopicConfig.CLEANUP_POLICY_CONFIG, cleanUpPolicy);
             adminClient.createTopics(Collections.singletonList(new NewTopic(testTopicName, defaultNumPartitions, defaultReplicationFactor).configs(topicConfig)));
-            clusterInstance.waitForTopic(testTopicName, defaultNumPartitions);
+            clusterInstance.waitTopicCreation(testTopicName, defaultNumPartitions);
 
             ConfigResource configResource = new ConfigResource(ConfigResource.Type.TOPIC, testTopicName);
             Config props = adminClient.describeConfigs(Collections.singleton(configResource)).all().get().get(configResource);
@@ -886,7 +888,7 @@ public class TopicCommandTest {
             String testTopicName = TestUtils.randomString(10);
 
             adminClient.createTopics(Collections.singletonList(new NewTopic(testTopicName, defaultNumPartitions, defaultReplicationFactor)));
-            clusterInstance.waitForTopic(testTopicName, defaultNumPartitions);
+            clusterInstance.waitTopicCreation(testTopicName, defaultNumPartitions);
 
             // delete the NormalTopic
             TopicCommand.TopicCommandOptions deleteOpts = buildTopicCommandOptionsWithBootstrap(clusterInstance, "--delete", "--topic", testTopicName);
@@ -912,7 +914,7 @@ public class TopicCommandTest {
             // create the topic with colliding chars
             String topicWithCollidingChar = "test.a";
             adminClient.createTopics(Collections.singletonList(new NewTopic(topicWithCollidingChar, defaultNumPartitions, defaultReplicationFactor)));
-            clusterInstance.waitForTopic(topicWithCollidingChar, defaultNumPartitions);
+            clusterInstance.waitTopicCreation(topicWithCollidingChar, defaultNumPartitions);
 
             // delete the topic
             TopicCommand.TopicCommandOptions deleteOpts = buildTopicCommandOptionsWithBootstrap(clusterInstance, "--delete", "--topic", topicWithCollidingChar);
@@ -926,7 +928,7 @@ public class TopicCommandTest {
 
             // recreate same topic
             adminClient.createTopics(Collections.singletonList(new NewTopic(topicWithCollidingChar, defaultNumPartitions, defaultReplicationFactor)));
-            clusterInstance.waitForTopic(topicWithCollidingChar, defaultNumPartitions);
+            clusterInstance.waitTopicCreation(topicWithCollidingChar, defaultNumPartitions);
         }
     }
 
@@ -943,7 +945,7 @@ public class TopicCommandTest {
 
             // create the offset topic
             adminClient.createTopics(Collections.singletonList(new NewTopic(Topic.GROUP_METADATA_TOPIC_NAME, defaultNumPartitions, defaultReplicationFactor)));
-            clusterInstance.waitForTopic(Topic.GROUP_METADATA_TOPIC_NAME, defaultNumPartitions);
+            clusterInstance.waitTopicCreation(Topic.GROUP_METADATA_TOPIC_NAME, defaultNumPartitions);
 
             // Try to delete the Topic.GROUP_METADATA_TOPIC_NAME which is allowed by default.
             // This is a difference between the new and the old command as the old one didn't allow internal topic deletion.
@@ -1000,7 +1002,7 @@ public class TopicCommandTest {
             int partition = 2;
             short replicationFactor = 2;
             adminClient.createTopics(Collections.singletonList(new NewTopic(testTopicName, partition, replicationFactor)));
-            clusterInstance.waitForTopic(testTopicName, partition);
+            clusterInstance.waitTopicCreation(testTopicName, partition);
 
             String output = captureDescribeTopicStandardOut(clusterInstance, buildTopicCommandOptionsWithBootstrap(clusterInstance, "--describe", "--topic", testTopicName));
             String[] rows = output.split(System.lineSeparator());
@@ -1023,11 +1025,11 @@ public class TopicCommandTest {
             topics.add(new NewTopic("test-5", 100, (short) 2));
 
             adminClient.createTopics(topics);
-            clusterInstance.waitForTopic(testTopicName, 20);
-            clusterInstance.waitForTopic("test-2", 41);
-            clusterInstance.waitForTopic("test-3", 5);
-            clusterInstance.waitForTopic("test-4", 5);
-            clusterInstance.waitForTopic("test-5", 100);
+            clusterInstance.waitTopicCreation(testTopicName, 20);
+            clusterInstance.waitTopicCreation("test-2", 41);
+            clusterInstance.waitTopicCreation("test-3", 5);
+            clusterInstance.waitTopicCreation("test-4", 5);
+            clusterInstance.waitTopicCreation("test-5", 100);
 
             String output = captureDescribeTopicStandardOut(clusterInstance, buildTopicCommandOptionsWithBootstrap(clusterInstance,
                     "--describe", "--partition-size-limit-per-response=20", "--exclude-internal"));
@@ -1074,14 +1076,14 @@ public class TopicCommandTest {
             short replicationFactor = 1;
 
             adminClient.createTopics(Collections.singletonList(new NewTopic(testTopicName, partitions, replicationFactor)));
-            clusterInstance.waitForTopic(testTopicName, partitions);
+            clusterInstance.waitTopicCreation(testTopicName, partitions);
 
             // check which partition is on broker 0 which we'll kill
             clusterInstance.shutdownBroker(0);
             assertEquals(2, clusterInstance.aliveBrokers().size());
 
             // wait until the topic metadata for the test topic is propagated to each alive broker
-            clusterInstance.waitForTopic(testTopicName, 3);
+            clusterInstance.waitTopicCreation(testTopicName, 3);
 
             // grab the console output and assert
             String output = captureDescribeTopicStandardOut(clusterInstance, buildTopicCommandOptionsWithBootstrap(clusterInstance, "--describe", "--topic", testTopicName, "--unavailable-partitions"));
@@ -1101,7 +1103,7 @@ public class TopicCommandTest {
             int partitions = 1;
             short replicationFactor = 3;
             adminClient.createTopics(Collections.singletonList(new NewTopic(testTopicName, partitions, replicationFactor)));
-            clusterInstance.waitForTopic(testTopicName, partitions);
+            clusterInstance.waitTopicCreation(testTopicName, partitions);
 
             clusterInstance.shutdownBroker(0);
             Assertions.assertEquals(clusterInstance.aliveBrokers().size(), 2);
@@ -1132,7 +1134,7 @@ public class TopicCommandTest {
             int partitions = 1;
             short replicationFactor = 3;
             adminClient.createTopics(Collections.singletonList(new NewTopic(testTopicName, partitions, replicationFactor).configs(topicConfig)));
-            clusterInstance.waitForTopic(testTopicName, partitions);
+            clusterInstance.waitTopicCreation(testTopicName, partitions);
 
             clusterInstance.shutdownBroker(0);
             assertEquals(2, clusterInstance.aliveBrokers().size());
@@ -1156,7 +1158,7 @@ public class TopicCommandTest {
         try (Admin adminClient = clusterInstance.admin();
              KafkaProducer<String, String> producer = createProducer(clusterInstance)) {
             adminClient.createTopics(Collections.singletonList(new NewTopic(testTopicName, defaultNumPartitions, defaultReplicationFactor)));
-            clusterInstance.waitForTopic(testTopicName, defaultNumPartitions);
+            clusterInstance.waitTopicCreation(testTopicName, defaultNumPartitions);
 
             TopicPartition tp = new TopicPartition(testTopicName, 0);
 
@@ -1234,7 +1236,7 @@ public class TopicCommandTest {
             short replicationFactor = 6;
 
             adminClient.createTopics(Collections.singletonList(new NewTopic(testTopicName, partitions, replicationFactor).configs(topicConfig)));
-            clusterInstance.waitForTopic(testTopicName, partitions);
+            clusterInstance.waitTopicCreation(testTopicName, partitions);
 
             clusterInstance.shutdownBroker(0);
             clusterInstance.shutdownBroker(1);
@@ -1291,7 +1293,7 @@ public class TopicCommandTest {
 
             adminClient.createTopics(newTopics);
             for (NewTopic topioc: newTopics) {
-                clusterInstance.waitForTopic(topioc.name(), partitions);
+                clusterInstance.waitTopicCreation(topioc.name(), partitions);
             }
 
             clusterInstance.shutdownBroker(0);
@@ -1332,7 +1334,7 @@ public class TopicCommandTest {
             short replicationFactor = 2;
 
             adminClient.createTopics(Collections.singletonList(new NewTopic(testTopicName, partitions, replicationFactor).configs(topicConfig)));
-            clusterInstance.waitForTopic(testTopicName, partitions);
+            clusterInstance.waitTopicCreation(testTopicName, partitions);
 
             String output = captureDescribeTopicStandardOut(clusterInstance, buildTopicCommandOptionsWithBootstrap(clusterInstance, "--describe"));
             assertTrue(output.contains(config), String.format("Describe output should have contained %s", config));
@@ -1344,7 +1346,7 @@ public class TopicCommandTest {
         String testTopicName = TestUtils.randomString(10);
         try (Admin adminClient = clusterInstance.admin()) {
             adminClient.createTopics(Collections.singletonList(new NewTopic(testTopicName, defaultNumPartitions, defaultReplicationFactor)));
-            clusterInstance.waitForTopic(testTopicName, defaultNumPartitions);
+            clusterInstance.waitTopicCreation(testTopicName, defaultNumPartitions);
 
             // test describe
             String output = captureDescribeTopicStandardOut(clusterInstance, buildTopicCommandOptionsWithBootstrap(clusterInstance, "--describe", "--describe", "--exclude-internal"));
@@ -1375,7 +1377,7 @@ public class TopicCommandTest {
                 Collections.singleton(new TopicPartition(testTopicName, 0))
         );
         adminClient.createTopics(Collections.singletonList(new NewTopic(testTopicName, defaultNumPartitions, defaultReplicationFactor)));
-        clusterInstance.waitForTopic(testTopicName, defaultNumPartitions);
+        clusterInstance.waitTopicCreation(testTopicName, defaultNumPartitions);
 
         String output = captureDescribeTopicStandardOut(clusterInstance, buildTopicCommandOptionsWithBootstrap(clusterInstance, "--describe", "--topic", testTopicName));
         String[] rows = output.split(System.lineSeparator());
@@ -1394,7 +1396,7 @@ public class TopicCommandTest {
             int partitions = 1;
             short replicationFactor = 3;
             adminClient.createTopics(Collections.singletonList(new NewTopic(topic, partitions, replicationFactor)));
-            clusterInstance.waitForTopic(topic, defaultNumPartitions);
+            clusterInstance.waitTopicCreation(topic, defaultNumPartitions);
 
             assertThrows(TopicExistsException.class,
                     () -> topicService.createTopic(buildTopicCommandOptionsWithBootstrap(clusterInstance, "--create", "--topic", topic)));
@@ -1402,14 +1404,35 @@ public class TopicCommandTest {
         }
     }
 
+    @ClusterTest
+    public void testCreateWithInternalConfig(ClusterInstance cluster) throws InterruptedException, ExecutionException {
+        String internalConfigTopicName = TestUtils.randomString(10);
+        String testTopicName = TestUtils.randomString(10);
+
+        try (Admin adminClient = cluster.admin()) {
+            CreateTopicsResult internalResult = adminClient.createTopics(List.of(new NewTopic(internalConfigTopicName, defaultNumPartitions, defaultReplicationFactor).configs(
+                Map.of(LogConfig.INTERNAL_SEGMENT_BYTES_CONFIG, "1000")
+            )));
+
+            ConfigEntry internalConfigEntry = internalResult.config(internalConfigTopicName).get().get(LogConfig.INTERNAL_SEGMENT_BYTES_CONFIG);
+            assertNotNull(internalConfigEntry, "Internal config entry should not be null");
+            assertEquals("1000", internalConfigEntry.value());
+
+            CreateTopicsResult nonInternalResult = adminClient.createTopics(List.of(new NewTopic(testTopicName, defaultNumPartitions, defaultReplicationFactor)));
+            
+            ConfigEntry nonInternalConfigEntry = nonInternalResult.config(testTopicName).get().get(LogConfig.INTERNAL_SEGMENT_BYTES_CONFIG);
+            assertNull(nonInternalConfigEntry, "Non-internal config entry should be null");
+        }
+    }
+
     private void checkReplicaDistribution(Map<Integer, List<Integer>> assignment,
                                           Map<Integer, String> brokerRackMapping,
-                                          Integer numBrokers,
-                                          Integer numPartitions,
-                                          Integer replicationFactor,
-                                          Boolean verifyRackAware,
-                                          Boolean verifyLeaderDistribution,
-                                          Boolean verifyReplicasDistribution) {
+                                          int numBrokers,
+                                          int numPartitions,
+                                          int replicationFactor,
+                                          boolean verifyRackAware,
+                                          boolean verifyLeaderDistribution,
+                                          boolean verifyReplicasDistribution) {
         // always verify that no broker will be assigned for more than one replica
         assignment.forEach((partition, assignedNodes) -> assertEquals(new HashSet<>(assignedNodes).size(), assignedNodes.size(),
                 "More than one replica is assigned to same broker for the same partition"));
